--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,18 @@
 {
-    "name": "pds/skeleton",
+    "name": "jsonconverter",
     "type": "standard",
-    "description": "Standard for PHP package skeletons.",
-    "homepage": "https://github.com/php-pds/skeleton",
-    "license": "CC-BY-SA-4.0",
+    "description": "PHP package to convert json files to PHP array files",
     "autoload": {
         "psr-4": {
-            "Pds\\Skeleton\\": "src/"
+            "Converter\\": "src/Converter"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Pds\\Skeleton\\": "tests/"
+            "Converter\\": "tests/Converter"
         }
     },
-    "bin": ["bin/pds-skeleton"],
+    "bin": ["bin/converter"],
     "require-dev": {
         "phpunit/phpunit": "^7.2"
     }
